[package]
name = "ppverif_fhe"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "0.6.4", features = ["boolean", "shortint", "integer", "x86_64"] }
rand = "0.8.5"
fhe = { path = "../fhe.rs/crates/fhe" }
fhe-traits = { path = "../fhe.rs/crates/fhe-traits" }
fhe-math = { path = "../fhe.rs/crates/fhe-math" }
thiserror = "2.0.9"

[features]
debug = []

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "mal_demo"
path = "examples/malicious_demo.rs"

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "semihonest"
harness = false

[[bench]]
name = "malclient"
harness = false
