[package]
name = "ppverif_fhe"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "0.6.4", features = ["boolean", "shortint", "integer", "x86_64"] }
rand = "0.8.5"

[profile.release]
debug = 1

[features]
debug = []
dhat-heap = []
dhat-ad-hoc = []

[[example]]
name = "demo"
path = "examples/demo.rs"

[dev-dependencies]
criterion = { version = "0.5" }
dhat = { version = "0.3.3" }

[[bench]]
name = "hint_bench"
harness = false

[[bench]]
name = "prng_bench"
harness = false

